--- a/input/styles/_weekly.scss
+++ b/input/styles/_weekly.scss
@@ -2,7 +2,7 @@ button#download_weekly {
     border: 3px solid rgb(14, 11, 102);
     margin-bottom: 15px;
     background-color: white;
-    width: 120px;
+    width: max-content;
     font-size: 15pt;
     font-weight: 700;
 
